--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Welcome to My YouTube Video Manager</h1>
     <p>This application allows you to create YouTube playlists, remove duplicate videos, and more using the YouTube API.</p>
     <footer>
-        <a href="/privacy-policy" target="_blank">Privacy Policy</a> | 
-        <a href="/terms-of-service" target="_blank">Terms of Service</a>
+        <a href="privacy-policy" target="_blank">Privacy Policy</a> | 
+        <a href="terms-of-service" target="_blank">Terms of Service</a>
     </footer>
 </body>
 </html>
